--- a/portfolio.html
+++ b/portfolio.html
@@ -10,187 +10,226 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Header -->
+    <!-- Start  Header -->
+
     <header class="header">
-      <nav class="page-nav">
-        <a class="link logo" href="./index.html"
-          >Web<span class="decor">Studio</span></a
-        >
-        <ul class="menu list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container flex-container">
+        <nav class="page-nav">
+          <a class="link logo" href="./index.html"
+            >Web<span class="decor">Studio</span></a
+          >
+          <ul class="menu list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts list">
+            <li class="contacts-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
+    <!-- End  Header -->
+
     <main>
-      <section class="portfolio">
-        <h1 hidden>Portfolio</h1>
-        <ul class="list">
-          <li>
-            <button class="button" type="button">All</button>
-          </li>
-          <li>
-            <button class="button" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="button" type="button">App</button>
-          </li>
-          <li>
-            <button class="button" type="button">Design</button>
-          </li>
-          <li>
-            <button class="button" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/bank-app.jpg"
-                alt="Banking App Interface"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Banking App Interface Concept</h2>
-              <p class="subtitle">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/phone.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Cashless Payment</h2>
-              <p class="subtitle">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/laptop-phone.jpg"
-                alt=">Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Meditation App</h2>
-              <p class="subtitle">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/car.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Taxi Service</h2>
-              <p class="subtitle">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/phone-screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Screen Illustrations</h2>
-              <p class="subtitle">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/girl.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Online Courses</h2>
-              <p class="subtitle">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/everything.jpg"
-                alt="Instagram Stories"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Instagram Stories Concept</h2>
-              <p class="subtitle">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Organic Food</h2>
-              <p class="subtitle">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/coffee.jpg"
-                alt="coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="title">Fresh Coffee</h2>
-              <p class="subtitle">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <!-- Start Portfolio -->
+
+      <section class="portfolio section">
+        <div class="container">
+          <h1 hidden>Portfolio</h1>
+          <ul class="portfolio-filter list">
+            <li>
+              <button class="button" type="button">All</button>
+            </li>
+            <li>
+              <button class="button" type="button">Web Site</button>
+            </li>
+            <li>
+              <button class="button" type="button">App</button>
+            </li>
+            <li>
+              <button class="button" type="button">Design</button>
+            </li>
+            <li>
+              <button class="button" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/bank-app.jpg"
+                  alt="Banking App Interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Banking App Interface Concept</h2>
+                  <p class="subtitle">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/phone.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Cashless Payment</h2>
+                  <p class="subtitle">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/laptop-phone.jpg"
+                  alt=">Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Meditation App</h2>
+                  <p class="subtitle">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/car.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Taxi Service</h2>
+                  <p class="subtitle">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/phone-screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Screen Illustrations</h2>
+                  <p class="subtitle">Design</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/girl.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Online Courses</h2>
+                  <p class="subtitle">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/everything.jpg"
+                  alt="Instagram Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Instagram Stories Concept</h2>
+                  <p class="subtitle">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/organic-food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Organic Food</h2>
+                  <p class="subtitle">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/coffee.jpg"
+                  alt="coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Fresh Coffee</h2>
+                  <p class="subtitle">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
-      <!--  -->
+
+      <!-- End Portfolio -->
     </main>
 
-    <!-- Footer -->
+    <!-- Start Footer -->
 
     <footer class="footer">
-      <a class="link logo logo-footer" href="./index.html"
-        >Web<span class="decor">Studio</span></a
-      >
-      <p class="footer-description subtitle">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-content">
+          <a class="link logo logo-footer" href="./index.html"
+            >Web<span class="decor">Studio</span>
+          </a>
+          <p class="footer-description description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
+
+    <!-- End Footer -->
   </body>
 </html>
