--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
       <!--Start Hero -->
 
       <section class="hero section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="button hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="button hero-button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <!--End Hero -->
@@ -69,8 +73,9 @@
       <!-- Start Advantages -->
 
       <section class="advantages section">
-        <h2 hidden>Advantages</h2>
         <div class="container">
+          <h2 class="hidden">Advantages</h2>
+
           <ul class="advantages-list list">
             <li class="advantages-item">
               <h3 class="advantages-title title">Strategy</h3>
@@ -213,15 +218,13 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-content">
-          <a class="link logo logo-footer" href="./index.html"
-            >Web<span class="decor">Studio</span>
-          </a>
-          <p class="footer-description description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="link logo logo-footer" href="./index.html"
+          >Web<span class="decor">Studio</span>
+        </a>
+        <p class="footer-description description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
 
