--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
       <section class="portfolio section">
         <div class="container">
-          <h1 hidden>Portfolio</h1>
+          <h1 class="hidden">Portfolio</h1>
           <ul class="portfolio-filter list">
             <li>
               <button class="button" type="button">All</button>
@@ -218,15 +218,13 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-content">
-          <a class="link logo logo-footer" href="./index.html"
-            >Web<span class="decor">Studio</span>
-          </a>
-          <p class="footer-description description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="link logo logo-footer" href="./index.html"
+          >Web<span class="decor">Studio</span>
+        </a>
+        <p class="footer-description description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
 
