--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <section class="advantages section">
         <div class="container">
-          <h2 class="hidden">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
 
           <ul class="advantages-list list">
             <li class="advantages-item">
