--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
       <section class="portfolio section">
         <div class="container">
-          <h1 class="hidden">Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="portfolio-filter list">
             <li>
               <button class="button" type="button">All</button>
